<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="#fff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"

            android:src="@drawable/veb_icon"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/l1"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textColor="#000"/>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/l2"
        android:textSize="18dp"
        android:layout_marginLeft="18dp"
        android:padding="10dp"
        android:textColor="#000"
        android:layout_marginTop="20dp"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/can"

            android:layout_marginLeft="18dp"
            android:text="@string/l3"
            android:textColor="#000"
            android:textSize="16dp"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"/>
            />

        <TextView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/l4"
            android:layout_marginLeft="200dp"
            android:textColor="#000"
            android:layout_marginBottom="10dp"
            android:textSize="16dp"
            android:textStyle="bold"

            />


    </LinearLayout>


</LinearLayout>